--- a/style.css
+++ b/style.css
@@ -89,6 +89,42 @@ main{
     font-size: 2em;
 }
 
+#allproducts{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 30px 0;
+    align-content: space-between;
+}
+
+#cardsProducts {
+    width: 300px;
+    border: 4px solid #53180a;
+    border-radius: 20px;
+    margin: 20px 20px;
+    background-color: #b3a69c;
+}
+
+.product a {
+    color: black;
+    text-decoration: none;
+}
+
+.product p{
+    text-align: center;
+}
+
+.product img {
+    width: 300px;
+    height: 220px;
+    border-radius: 15px 15px 0 0;
+}
+
+.descriptionBloc p{
+    text-align: left;
+    margin: 10px;
+}
+
 footer{
     display:flex;
     align-items: center;
