--- a/frontend/style.css
+++ b/frontend/style.css
@@ -60,6 +60,7 @@ color: black;
     display: flex;
     flex-direction: column;
     text-align: center;
+    width: 85%;
 }
 
 .bandeau-oursons-texte h2{
@@ -115,7 +116,7 @@ main{
 }
 
 .product img {
-    width: 300px;
+    width: 100%;
     height: 220px;
     border-radius: 15px 15px 0 0;
 }
