--- a/frontend/style.css
+++ b/frontend/style.css
@@ -169,13 +169,12 @@ footer{
     flex-direction: column;
     align-content: center;
     width: 25%;
-    background-color: #eccca7;
     border-radius: 20px;
     margin: 20px 0;
+    border: 4px solid #53180a;
 }
 
 #cardsProduct img{
-    margin: 10px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
@@ -184,7 +183,9 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px;
+    padding: 10px;
+    background-color: #b3a69c;
+    border-radius: 0 0 20px 20px;
 }
 
 .description h3 {
