--- a/style.css
+++ b/style.css
@@ -323,6 +323,8 @@ input {
     background-color: #eccca7;
     border-radius: 20px;
     padding: 0 20px 20px 20px;
+    width: 75%;
+    text-align: center;
 }
 
 hr {
