changing color border send order and modification nammin folder

--- a/style.css
+++ b/style.css
@@ -345,6 +345,14 @@ input {
     cursor: pointer;
 }
 
+input:invalid {
+    border: 2px solid red;
+  }
+
+  input:valid {
+    border: 2px solid black;
+  }
+
 #confirm {
     background-color: #eccca7;
     border-radius: 20px;
